tdf#132435 only place menu vertically if up/down requested

don't fallback to left/right if it doesn't fit, just scroll the
menu instead

Change-Id: I20b261fd7fee78555bf87b25dfeed33c23602493